# serializer version: 1
# name: test_package_xml_condition_evaluation[ros1-default]
  dict({
    'distro': 'noetic',
    'env': dict({
      'ROS_DISTRO': 'noetic',
      'ROS_VERSION': '1',
    }),
    'filtered_build': list([
      'ros-noetic-catkin',
      'ros-noetic-roscpp',
    ]),
    'filtered_run': list([
      'ros-noetic-roscpp',
    ]),
    'override_env': dict({
    }),
  })
# ---
# name: test_package_xml_condition_evaluation[ros1-override-to-ros2]
  dict({
    'distro': 'noetic',
    'env': dict({
      'ROS_DISTRO': 'custom-noetic',
      'ROS_VERSION': '2',
    }),
    'filtered_build': list([
      'ros-noetic-ament-cmake',
      'ros-noetic-rclcpp',
    ]),
    'filtered_run': list([
      'ros-noetic-rclcpp',
    ]),
    'override_env': dict({
      'ROS_DISTRO': 'custom-noetic',
      'ROS_VERSION': '2',
    }),
  })
# ---
# name: test_package_xml_condition_evaluation[ros2-default]
  dict({
    'distro': 'jazzy',
    'env': dict({
      'ROS_DISTRO': 'jazzy',
      'ROS_VERSION': '2',
    }),
    'filtered_build': list([
      'ros-jazzy-ament-cmake',
      'ros-jazzy-rclcpp',
    ]),
    'filtered_run': list([
      'ros-jazzy-rclcpp',
    ]),
    'override_env': dict({
    }),
  })
# ---
# name: test_package_xml_condition_evaluation[ros2-override-to-ros1]
  dict({
    'distro': 'jazzy',
    'env': dict({
      'ROS_DISTRO': 'custom-jazzy',
      'ROS_VERSION': '1',
    }),
    'filtered_build': list([
      'ros-jazzy-catkin',
      'ros-jazzy-roscpp',
    ]),
    'filtered_run': list([
      'ros-jazzy-roscpp',
    ]),
    'override_env': dict({
      'ROS_DISTRO': 'custom-jazzy',
      'ROS_VERSION': '1',
    }),
  })
# ---
# name: test_recipe_includes_project_run_dependency
  '''
  context: {}
  package:
    name: custom_ros
    version: 0.0.1
  source: []
  build:
    number: null
    script:
      content: ''
      env: {}
      secrets: []
  requirements:
    build:
    - ros-noetic-catkin
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - ninja
    - python
    - setuptools
    - git
    - git-lfs
    - cmake
    - cpython
    - patch
    - make
    - coreutils
    - ${{ compiler('c') }}
    - ${{ compiler('cxx') }}
    host:
    - ros-noetic-catkin
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - python
    - numpy
    - pip
    - pkg-config
    - ros-distro-mutex
    run:
    - rich >=10.0
    - ros-noetic-ros-package
    - ros-noetic-multi-package
    - ros-distro-mutex
    run_constraints: []
  tests: []
  about:
    homepage: https://test.io/custom_ros
    license: LicenseRef-Apache License 2.0
    license_file: null
    summary: Demo
    description: Demo
    documentation: null
    repository: https://github.com/test/custom_ros
  extra: null
  
  '''
# ---
